Fix x axis overflow

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Orbitron:wght@400..900&display=swap');
 
 /* General styles */
+* {
+    box-sizing: border-box;
+}
 
 body {
     height: 100%;
@@ -10,6 +13,12 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.row {
+    max-width: 90%;
+    margin: auto;
+}
+
 
 h1,h2 {
     font-family: 'orbitron', sans-serif;
